@@ -65,6 +65,13 @@ func (c *GuestController) HandleCommandRegister(comm *communication.Register, se
 			fmt.Printf("\n! Unexpected registration error for user %s: %s", comm.Username, err.Error())
 		} else {
 			c.manager.TransferGuest(c, &user)
+			tempcon, err := c.manager.AttemptCreateMemberController(user.ID)
+			if err == nil {
+				fmt.Println("setting page on new member controller")
+				server.PageManager.TransferMemberToPage(tempcon, c.GetPage())
+			} else {
+				fmt.Println("failed to create member controller", user.ID)
+			}
 			c.AddMessage(true, "You registered succesfully.")
 			var loginResponse communication.LoginResponse
 			prof, _ := serv.DB.GetCommUser(&user)
